added icons, attempting modularisation - incomplete, Text clarity

--- a/personal-site/public/manifest.json
+++ b/personal-site/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Mmeli Dyantyi",
+  "name": "Mmeli Gabriel Dyantyi - Freelance Fullstack Developer South Africa",
   "icons": [
     {
       "src": "favicon.ico",
